--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -11,7 +11,7 @@
 #   - dist/**/*.js
 #
 src_files:
-    - public/javascripts/**/*.js
+  - assets/application.js
 
 # stylesheets
 #
@@ -25,6 +25,7 @@ src_files:
 #   - stylesheets/*.css
 #
 stylesheets:
+  - stylesheets/**/*.css
 
 # helpers
 #
@@ -37,10 +38,11 @@ stylesheets:
 #   - helpers/**/*.js
 #
 helpers:
-  - 'helpers/**/*.js'
+  - helpers/**/*.js
+
 # spec_files
 #
-#  Return an array of filepaths relative to spec_dir to include.
+# Return an array of filepaths relative to spec_dir to include.
 # Default: ["**/*[sS]pec.js"]
 #
 # EXAMPLE:
@@ -71,18 +73,4 @@ src_dir:
 #
 # spec_dir: spec/javascripts
 #
-spec_dir:
-
-# spec_helper
-#
-# Ruby file that Jasmine server will require before starting.
-# Returned relative to your root path
-# Default spec/support/jasmine_helper.rb
-#
-# EXAMPLE:
-#
-# spec_helper: spec/support/jasmine_helper.rb
-#
-spec_helper: spec/support/jasmine_helper.rb
-
-
+spec_dir: spec/javascripts
